Fix accordion alignment & capitalize accordion subtitles (#39)

--- a/src/components/support-links/accordion.module.css
+++ b/src/components/support-links/accordion.module.css
@@ -5,7 +5,7 @@
 
 .accordionItem {
   border-bottom: 1px solid #000;
-  padding-bottom: 8px;
+  padding-top: 8px;
 }
 
 .accordion-button collapsed {
@@ -13,14 +13,17 @@
 }
 
 .accordionHeader {
-  padding-bottom: 7px;
-  padding-top: 7px;
-}
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 7px 10px;
+} 
 
 .accordionSubtitle {
-  width: 100%;
+  flex: 1;
   font-weight: 600;
-}
+  margin: 0;
+} 
 
 .accordionBody {
   font-size: medium;
@@ -44,10 +47,8 @@
 
 .plusIcon {
   display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  padding-right: 10px;
-  padding-top: 10px;
+  align-items: center;
+  padding: 0 10px 0 0;
 }
 
 .linkColumn {
